Updated README.md: gradle run configuration.